--- a/Project/Client/Views/Product/Product.cshtml
+++ b/Project/Client/Views/Product/Product.cshtml
@@ -1,7 +1,4 @@
-﻿@using Client.Models.ProductDTO
-@model ProductViewModel
-
-<div class="container-fluid mt-5" style="min-height:1100px;">
+﻿<div class="container-fluid mt-5" style="min-height:1100px;">
     <h1 class="text-center" style="font-family: 'Roboto', 'Segoe UI', sans-serif;">Orther Product</h1>
     <div class="row mt-3">
         <div class="col-md-2">
