--- a/Project/Client/Views/Admin/CreateCategory.cshtml
+++ b/Project/Client/Views/Admin/CreateCategory.cshtml
@@ -17,18 +17,19 @@
             <div class="mb-2">
                 <label asp-for="Type" class="form-label">Type</label>
                 <select asp-for="Type" class="form-select" aria-label="Type">
-                    <option value="0">Tag</option>
-                    <option value="1">Category</option>
-                    <option value="2">Genre</option>
+                    <option value="0" selected>0</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
                 </select>
                 <span asp-validation-for="Type" class="text-danger"></span>
             </div>
             <div class="mb-2">
+                <label asp-for="Status" class="form-label">Status</label>
                 <select asp-for="Status" class="form-select" aria-label="Status">
-                    <option value="0">Active</option>
-                    <option value="1">Inactive</option>
-                    <option value="2">Block</option>
-                    <option value="3">Deleted</option>
+                    <option value="0" selected>0</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
                 </select>
                 <span asp-validation-for="Status" class="text-danger"></span>
             </div>
@@ -38,7 +39,7 @@
         <input type="submit" value="Create" class="btn btn-danger w-50" />
     </div>
     <div class="form-group mt-3 text-center">
-        <a href="@Url.Action("CategoriesManager")" class="btn btn-primary w-50">Cancel</a>
+        <input type="button" value="Cancel" data-bs-dismiss="modal" class="btn btn-primary w-50" />
     </div>
 </form>
 
