--- a/Project/Client/Views/Admin/OrdersManager.cshtml
+++ b/Project/Client/Views/Admin/OrdersManager.cshtml
@@ -1,9 +1,9 @@
 ﻿@{
     Layout = "_LayoutAdmin";
 }
-
 @using Client.Models.OrderModel;
-@model OrderViewModel
+@model ICollection<OrderModel>
+
 <div class="pt-3 pb-4">
     <span class="titleManager bg-success py-3 px-5 rounded-4 fw-bold text-white">Orders Manager</span>
 </div>
@@ -12,10 +12,10 @@
     <!-- Thanh tìm kiếm và nút Thêm -->
     <div class="d-flex justify-content-between mb-3">
         <form asp-action="SearchOrder" method="get" class="col-md-4">
-            <input name="id" class="form-control" type="text" placeholder="Search by order id or payment transaction id" />
+            <input class="form-control" type="text" placeholder="Search by..." />
         </form>
-        @*  <div>
-        <button class="btn btn-success" data-toggle="modal" data-target="#modalOrder">+ Add</button>
+       @*  <div>
+            <button class="btn btn-success" data-toggle="modal" data-target="#modalOrder">+ Add</button>
         </div> *@
     </div>
 
@@ -31,7 +31,7 @@
     <table class="table table-bordered table-hover align-middle">
         <thead class="table-light">
             <tr>
-                @*      <th scope="col"><input type="checkbox" id="selectAll"></th> *@
+           @*      <th scope="col"><input type="checkbox" id="selectAll"></th> *@
                 <th scope="col">Order Id</th>
                 <th scope="col">Transaction Id</th>
                 <th scope="col">Total Price</th>
@@ -39,7 +39,7 @@
                 <th scope="col">Payment Name</th>
                 <th scope="col">Payment Status</th>
                 <th scope="col">Payment Method</th>
-                <th scope="col">Create At</th>
+                <th scope="col" >Create At</th>
                 <th scope="col">Update At</th>
                 <th scope="col">Customer Id</th>
                 @* <th scope="col">UpdateAt</th> *@
@@ -48,10 +48,10 @@
         <tbody>
             @if (Model != null)
             {
-                foreach (var order in Model.Orders)
+                foreach (var order in Model)
                 {
                     <tr>
-                        @*             <td><input type="checkbox" class="order-checkbox"></td> *@
+            @*             <td><input type="checkbox" class="order-checkbox"></td> *@
                         <td scope="col">@order.Id</td>
                         <td scope="col">@order.PaymentTransactionId</td>
                         <td scope="col">@order.TotalPrice</td>
@@ -63,18 +63,7 @@
                         <td scope="col" title="@order.UpdatedAt" style="max-width:90px" class="text-truncate">@order.UpdatedAt</td>
                         <td scope="col" title="@order.CustomerId" style="max-width:90px" class="text-truncate">@order.CustomerId</td>
                         <td>
-                            <a href="javascript:void(0);"
-                               data-url="@Url.Action("OrderDetail", "Admin", new { id = order.Id })"
-                               onclick="showDetailModal(this)"
-                               title="Order Detail">
-                                <i class="fa-solid fa-pen-to-square" style="color:#0b3d0d"></i>
-                            </a>
-
-
-                        </td>
-
-                        <td>
-                            <a asp-action="UpdateOrderStatus" asp-route-Id="@order.Id" class="text-danger mx-2"><span><i class="fa-regular fa-pen-to-square"></i></span></a>
+                            <a asp-action="Order Detail" asp-route-Id="@order.Id" class="text-danger mx-2"><span><i class="fa-regular fa-pen-to-square"></i></span></a>
                         </td>
                         @* <td>-</td> *@
                     </tr>
@@ -91,7 +80,7 @@
 
     <!-- Phân trang -->
     <div class="d-flex justify-content-between mt-3">
-        <div>Total: @Model.Orders.Count()</div>
+        <div>Total: 3,145</div>
         <div>
             <select class="form-select form-select-sm w-auto d-inline-block">
                 <option>20 records per page</option>
@@ -118,27 +107,55 @@
 
 
 
-@* Modal *@
-<div id="modalContainer"></div> <!-- Modal container để load nội dung partial -->
-@section Scripts {
-    @{
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
-    }
-}
-<script>
-    function showDetailModal(element) {
-        var url = $(element).data('url');
 
-        $.ajax({
-            url: url,
-            type: 'GET',
-            success: function (response) {
-                $('#modalContainer').html(response); // Thêm nội dung partial vào modalContainer
-                $('#modalOrderDetail').modal('show'); // Hiển thị modal
-            },
-            error: function () {
-                alert('Có lỗi xảy ra khi tải nội dung modal.');
-            }
-        });
-    }
-</script>
+
+
+
+
+
+
+@* Modal *@
+@* <div class="modal fade" id="modalOrder" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-xl">
+        <div class="modal-content">
+            <div class="container-fluid p-5">
+                <form class="row" asp-action="Create">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div class="row">
+                        <div class="col">
+                            <div class="mb-2">
+                                <label class="form-label">Email address</label>
+                                <input type="email" class="form-control">
+                                <span class="text-danger"></span>
+                            </div>
+                            <div class="mb-2">
+                                <label class="form-label">Email address</label>
+                                <input type="email" class="form-control">
+                                <span class="text-danger"></span>
+                            </div>
+                            <div class="mb-2">
+                                <label class="form-label">Email address</label>
+                                <input type="email" class="form-control">
+                                <span class="text-danger"></span>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="text-center">
+                                <div>
+                                    <img src="~/image/avatar.jpeg" alt="Alternate Text" style="width:200px; height200px;" />
+                                </div>
+                                <a class="btn btn-outline-dark text-center mt-2">Change Avatar</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group mt-3 text-center">
+                        <input type="submit" value="Create" asp-action="CreateOrder" class="btn btn-danger w-50" />
+                    </div>
+                    <div class="form-group mt-3 text-center">
+                        <input type="submit" value="Save" asp-action="SaveEdit" class="btn btn-primary w-50" />
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div> *@
