--- a/Project/Client/Views/Admin/UserDelete.cshtml
+++ b/Project/Client/Views/Admin/UserDelete.cshtml
@@ -12,37 +12,41 @@
 <div>
     <h4>UserDTO</h4>
     <hr />
-    <form asp-action="UserDelete">
-        <input hidden asp-for="@Model.Id" />
-        <dl class="row">
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Id)
-            </dt>
-            <dd class="col-sm-10">
-                <input type="text" asp-for="Id" class="form-control" readonly />
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Username)
-            </dt>
-            <dd class="col-sm-10">
-                <input type="text" asp-for="Username" class="form-control" readonly />
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Email)
-            </dt>
-            <dd class="col-sm-10">
-                <input type="text" asp-for="Email" class="form-control" readonly />
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.PhoneNumber)
-            </dt>
-            <dd class="col-sm-10">
-                <input type="text" asp-for="PhoneNumber" class="form-control" readonly />
-            </dd>
-        </dl>
+    <dl class="row">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Id)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Id)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Username)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Username)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Email)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Email)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.PhoneNumber)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.PhoneNumber)
+        </dd>
+    </dl>
 
-        <input type="submit" asp-action="UserDelete" value="Delete" class="btn btn-danger"/> |
+    @* <form asp-action="UsersDelete" method="post">
+        <input type="hidden" asp-for="Id" />
+        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <a asp-action="UsersManager" class="btn btn-secondary">Back to List</a>
+    </form> *@
+
+    <form asp-action="UserDelete">
+        <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="UsersManager" class="btn btn-secondary">Back to List</a>
     </form>
-
 </div>
