--- a/Project/Client/Views/Shared/_Layout.cshtml
+++ b/Project/Client/Views/Shared/_Layout.cshtml
@@ -133,6 +133,7 @@
                                     <a class="navelement" asp-controller="User" asp-action="EditProfile">EditProfile</a>
                                     <a class="navelement" asp-controller="User" asp-action="PasswordSecurity">Password&Security</a>
                                     <a class="navelement" asp-controller="User" asp-action="UploadProduct">UploadProduct</a>
+                                    <a class="navelement" asp-controller="User" asp-action="UserDashboard">UserDashboard</a>
                                 </div>
                             </li>
                         </ul>
