--- a/Project/Client/Views/Admin/_CreateUserPartial.cshtml
+++ b/Project/Client/Views/Admin/_CreateUserPartial.cshtml
@@ -26,11 +26,24 @@
         </div>
         <div class="col">
             <div class="text-center">
-                <div>
-                    <img id="avatarPreview" src="@Model.Avatar" alt="Avatar Preview" style="width:200px; height:200px;" />
-                </div>
-                <input type="file" id="avatarInput" asp-for="@Model.AvatarFile" class="form-control mt-2" style="display: none;" accept=".png, .jpg" />
-                <a id="changeAvatarBtn" class="btn btn-outline-dark text-center mt-2">Change Avatar</a>
+                @if (Model.AvatarFile != null)
+                {
+                    <div>
+                        <img id="avatarPreview" src="@Model.Avatar" alt="Avatar Preview" style="width:200px; height:200px;" />
+                    </div>
+                    <input type="file" id="avatarInput" asp-for="@Model.AvatarFile" class="form-control mt-2" style="display: none;" accept=".png, .jpg" />
+                    <a id="changeAvatarBtn" class="btn btn-outline-dark text-center mt-2">Change Avatar</a>
+
+                }
+                else
+                {
+                    <div>
+                        <img id="avatarPreview" src="@Model.Avatar" alt="Avatar Preview" style="width:200px; height:200px;" />
+                    </div>
+                    <input type="file" id="avatarInput" asp-for="@Model.Avatar" class="form-control mt-2" style="display: none;" accept=".png, .jpg" />
+                    <a id="changeAvatarBtn" class="btn btn-outline-dark text-center mt-2">Change Avatar</a>
+
+                }
             </div>
         </div>
     </div>
