--- a/Project/Client/Views/Admin/UserDelete.cshtml
+++ b/Project/Client/Views/Admin/UserDelete.cshtml
@@ -14,6 +14,9 @@
     <hr />
     <form asp-action="UserDelete">
         <input hidden asp-for="@Model.Id" />
+        <input type="hidden" asp-for="@Model.Status" />
+        <input type="hidden" asp-for="@Model.Role" />
+        <input type="hidden" asp-for="@Model.EmailConfirmation" />
         <dl class="row">
             <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.Id)
