update uploadproduct and dashboard ok

--- a/Project/Client/Views/User/Register.cshtml
+++ b/Project/Client/Views/User/Register.cshtml
@@ -3,7 +3,8 @@
 }
 @using Client.Models.AuthenModel
 @model RegisterModel
-<div class="login-container">
+
+<div class="login-container" style="height:100vh;">
     <div class="login-box">
         <div class="login-logo">
             <a asp-controller="Home" asp-action="Index"><img src="~/image/logo.png" alt="Logo" /></a>
