--- a/Project/Client/Views/User/Login.cshtml
+++ b/Project/Client/Views/User/Login.cshtml
@@ -5,7 +5,7 @@
 @model LoginRequestModel
 
 
-<div class="login-container">
+<div class="login-container" style="height:100vh;">
     <div class="login-box">
         <div class="login-logo">
             <a asp-controller="Home" asp-action="Index"><img src="~/image/logo.png" alt="Logo" /></a>
