--- a/Project/Client/Views/Product/ProductDetail.cshtml
+++ b/Project/Client/Views/Product/ProductDetail.cshtml
@@ -1,4 +1,8 @@
-﻿<style>
+﻿@using Client.Models.ProductDTO
+@model ProductModel
+
+
+<style>
     #anh-bia img {
         width: 100%;
         height: 500px; /* Thay đổi để tự động điều chỉnh chiều cao */
@@ -94,11 +98,28 @@
     <div class="row">
         <div class="col-12">
             <div id="anh-bia">
-                <!-- Thay thế đường dẫn ảnh bên dưới bằng ảnh của bạn -->
-                <img src="~/image/game.jpg" />
+                @* Kiểm tra Model.Links có null không *@
+                @if (Model.Links != null && Model.Links.Any())
+                {
+                    var firstImageUrl = Model.Links.FirstOrDefault(link => link.Url.Contains("cloudinary"))?.Url;
+
+                    @if (!string.IsNullOrEmpty(firstImageUrl))
+                    {
+                        <img src="@firstImageUrl" alt="Image Cover" />
+                    }
+                    else
+                    {
+                        <p>Không có hình ảnh để hiển thị.</p>
+                    }
+                }
+                else
+                {
+                    <p>Không có hình ảnh để hiển thị.</p>
+                }
             </div>
         </div>
     </div>
+
 
     <!-- Phần thông tin game -->
     <div class="row mt-4">
@@ -118,12 +139,18 @@
                 </video>
 
                 <!-- Hình ảnh -->
-                <img src="~/image/game.jpg" />
-                <img src="~/image/game.jpg" />
+                @foreach (var product in Model.Links)
+                {
+                    if (product.Url.Contains("cloudinary"))
+                    {
+                        <img src="@product.Url"/>
+                    }
+                    
+                }
             </div>
 
             <h3 class="mt-4">Description</h3>
-            <p>Mô tả game sẽ được hiển thị ở đây...</p>
+            <p>@Model.Description</p>
 
             <h3 class="mt-4">Comment</h3>
             <p>Bình luận của người chơi...</p>
@@ -133,7 +160,7 @@
         <div class="col-md-4 game-detail border border-secondary">
             <h4 class="fw-bold">Game Detail</h4>
             <div class="list-group">
-                <div class="list-group-item"><strong>Status:</strong> <a href="#">Released</a></div>
+                <div class="list-group-item"><strong>Status:</strong> <a href="#">@Model.Status</a></div>
                 <div class="list-group-item"><strong>Author:</strong> <a href="#">yourname123</a></div>
                 <div class="list-group-item"><strong>Genre:</strong> <a href="#">Fighting</a></div>
                 <div class="list-group-item">
@@ -159,8 +186,17 @@
                 </video>
 
                 <!-- Hình ảnh -->
-                <img src="~/image/game.jpg" />
-                <img src="~/image/game.jpg" />
+                @foreach (var product in Model.Links)
+                {
+                    if (product.Url != null)
+                    {
+                        <img src="@product.Url" />
+                    }
+                    else
+                    {
+                        <p>Không có hình ảnh để hiển thị.</p>
+                    }
+                }
             </div>
         </div>
     </div>
