update product api get all by username

--- a/Project/Client/Views/User/UserDashboard.cshtml
+++ b/Project/Client/Views/User/UserDashboard.cshtml
@@ -152,8 +152,8 @@
         <h4>Summary</h4>
         <p>View more →</p>
         <div class="summary-charts">
-            <div class="chart">Views Chart</div>
-            <div class="chart">Downloads Chart</div>
+            <a asp-controller="product" asp-action="Collection" class="chart">Wish List</a>
+            <a asp-controller="product" asp-action="History" class="chart">History Order</a>
         </div>
     </div>
 </div>
