--- a/Project/Client/Views/User/UserDashboard.cshtml
+++ b/Project/Client/Views/User/UserDashboard.cshtml
@@ -153,7 +153,7 @@
         <p>View more →</p>
         <div class="summary-charts">
             <a asp-controller="product" asp-action="Collection" class="chart">Wish List</a>
-            <a asp-controller="product" asp-action="History" class="chart">History Order</a>
+            <a asp-controller="Order" asp-action="History" class="chart">History Order</a>
         </div>
     </div>
 </div>
