Revert "Merge branch 'main' into TuanDepTrai"
This reverts commit 27fce6d96bdff7329816ac70736a83a86e49b604, reversing
changes made to bb1a49295e866d6195392bd1200ed665503241db.

--- a/Project/Client/Views/Product/Product.cshtml
+++ b/Project/Client/Views/Product/Product.cshtml
@@ -139,7 +139,7 @@
                                 <div class="info_other">
                                     <h4>@product.Name</h4>
                                     <p>@product.Description</p>
-                                    <a asp-controller="Product" asp-action="ProductDetail" asp-route-Id="@product.Id" class="btn_orther">Read More</a>
+                                    <a asp-controller="Product" asp-action="ProductDetail" class="btn_orther">Read More</a>
                                 </div>
                             </div>
                         }
