--- a/Project/Client/Views/User/UploadProduct.cshtml
+++ b/Project/Client/Views/User/UploadProduct.cshtml
@@ -110,8 +110,7 @@
 </div> *@
 
 
-@using Client.Models.ProductDTO
-@model CreateProductModel
+
 
 <style>
     h4 {
@@ -142,15 +141,15 @@
 
         <!-- Phần bên trái chứa các input chính -->
         <div class="col-md-8">
-            @* <div class="mb-3">
+            <div class="mb-3">
                 <label class="form-label fw-bold fs-5">Title</label>
                 <input class="form-control" />
                 <span class="text-danger"></span>
-            </div> *@
+            </div>
             <div class="mb-3">
-                <label asp-for="@Model.Price" class="control-label"></label>
-                <input asp-for="@Model.Price" class="form-control" type="number" step="0.01" />
-                <span asp-validation-for="@Model.Price" class="text-danger"></span>
+                <label class="form-label fw-bold fs-5">Price</label>
+                <input class="form-control" />
+                <span class="text-danger"></span>
             </div>
 
             <!-- Phần Donate/Free Pricing Tabs -->
@@ -166,27 +165,25 @@
             </div>
 
             <div class="mb-3">
-                <label asp-for="@Model.Discount" class="control-label"></label>
-                <input asp-for="@Model.Discount" class="form-control" type="number" step="0.01" />
-                <span asp-validation-for="@Model.Discount" class="text-danger"></span>
+                <label class="form-label fw-bold fs-5">Discount</label>
+                <input class="form-control" />
+                <span class="text-danger"></span>
             </div>
             <div class="mb-3">
                 <label class="form-label fw-bold fs-5">Uploads</label>
                 <div class="border p-2 mb-2">
                     <p id="fileInfo">No file uploaded</p>
                 </div>
-                @* <input type="file" name="gameFile" id="fileInput" class="d-none" accept=".rar, .zip" onchange="displayFileInfo()" /> *@
-                <input type="file" name="gameFile" multiple class="form-control" asp-for="@Model.gameFile" />
-                <span asp-validation-for="@Model.gameFile" class="text-danger"></span>
+                <input type="file" name="gameFile" id="fileInput" class="d-none" accept=".rar, .zip" onchange="displayFileInfo()" />
                 <button type="button" class="btn btn-danger" onclick="document.getElementById('fileInput').click()">Upload</button>
                 <span class="m-2">File size limit: 1 GB</span>
             </div>
             <div class="mb-3">
                 <label class="form-label fw-bold fs-5">Details</label>
                 <div class="mb-2">
-                    <label asp-for="@Model.Description" class="control-label"></label>
-                    <textarea asp-for="@Model.Description" class="form-control"></textarea>
-                    <span asp-validation-for="@Model.Description" class="text-danger"></span>
+                    <label class="form-label fw-bold fs-6">Description</label>
+                    <textarea class="form-control"></textarea>
+                    <span class="text-danger"></span>
                 </div>
                 <div class="mb-2">
                     <div class="form-group">
